--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,8 +8,21 @@ jobs:
   build:
     name: Build and Pushing the Image
     runs-on: ubuntu-latest
-
     steps:
+    - run: echo  "The job was automatically triggered by a ${{ github.event_name }} event."
+    - run: echo  "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+    - run: echo  "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+    - run: echo "${{ secrets.PASSWORD }}"
+    - name: Print custom environment variables from ubuntu-latest
+      env:
+        STEP_ENVIRONMENT_VARIABLE: 'custom step environment variable for bash'
+      run: |
+        echo "Accessing environment variables in run command"
+        echo "$WORKSPACE_ENVIRONMENT_VARIABLE"
+        echo "$JOB_ENVIRONMENT_VARIABLE"
+        echo "$STEP_ENVIRONMENT_VARIABLE"
+
+  steps:
     - name: Checkout
       uses: actions/checkout@v2
 
