--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,9 +21,9 @@ jobs:
         echo "$WORKSPACE_ENVIRONMENT_VARIABLE"
         echo "$JOB_ENVIRONMENT_VARIABLE"
         echo "$STEP_ENVIRONMENT_VARIABLE"  SAST:
-    needs: unit-test
-  runs-on: ubuntu-latest
-       steps:
+ #   needs: unit-test
+#  runs-on: ubuntu-latest
+#  steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
