--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,20 +20,7 @@ jobs:
         echo "Accessing environment variables in run command"
         echo "$WORKSPACE_ENVIRONMENT_VARIABLE"
         echo "$JOB_ENVIRONMENT_VARIABLE"
-        echo "$STEP_ENVIRONMENT_VARIABLE"  SAST:
- #   needs: unit-test
-#  runs-on: ubuntu-latest
-#  steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-
+        echo "$STEP_ENVIRONMENT_VARIABLE"
   #steps:
     - name: Checkout
       uses: actions/checkout@v2
