--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,6 +5,33 @@ on:
   push:
     branches: [ main ]
 jobs:
+  style:
+    needs: pre-build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        python-version: ['2.7', '3.8', '3.9']
+     #   python-version: ['3.9']        
+        exclude:
+          - os: macos-latest
+            python-version: '3.8'
+    steps:
+    - name: Check out repository code
+      uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python --version
+        python -m pip install --upgrade pip
+        pip install pycodestyle
+    - name: Style with pycodestyle
+      run: |
+        python --version
+        pycodestyle *.py
   build:
     name: Build and Pushing the Image
     runs-on: ubuntu-latest
@@ -21,6 +48,7 @@ jobs:
         echo "$WORKSPACE_ENVIRONMENT_VARIABLE"
         echo "$JOB_ENVIRONMENT_VARIABLE"
         echo "$STEP_ENVIRONMENT_VARIABLE"
+
   #steps:
     - name: Checkout
       uses: actions/checkout@v2
