--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,18 +25,14 @@ jobs:
   #  needs: unit-test
     runs-on: ubuntu-latest
     steps:
-     - stage: "Run Tests & SonarCloud Analysis"
-       script:
-         - npm test
-         - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT_KEY
- #   - uses: actions/checkout@v2
-  #    with:
-#        fetch-depth: 0
- #   - name: SonarCloud Scan
-#      uses: sonarsource/sonarcloud-github-action@master
-  #    env:
-#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
- #       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    - uses: actions/checkout@v2
+     # with:
+    #    fetch-depth: 0
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
 
   #steps:
