--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,45 +7,21 @@ on:
 jobs:
   build:
     name: Build and Pushing the Image
-  #  runs-on: ubuntu-latest
- #   steps:
-#    - run: echo  "The job was automatically triggered by a ${{ github.event_name }} event."
-#    - run: echo  "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
- #   - run: echo  "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
- #   - run: echo "${{ secrets.PASSWORD }}"
-#    - name: Print custom environment variables from ubuntu-latest
-#      env:
- #       STEP_ENVIRONMENT_VARIABLE: 'custom step environment variable for bash'
-  #    run: |
-   #     echo "Accessing environment variables in run command"
-    #    echo "$WORKSPACE_ENVIRONMENT_VARIABLE"
-     #   echo "$JOB_ENVIRONMENT_VARIABLE"
-      #  echo "$STEP_ENVIRONMENT_VARIABLE"
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        python-version: ['2.7', '3.8', '3.9']
-     #   python-version: ['3.9']        
-        exclude:
-          - os: macos-latest
-            python-version: '3.8'
+    runs-on: ubuntu-latest
     steps:
-    - name: Check out repository code
-      uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - run: echo  "The job was automatically triggered by a ${{ github.event_name }} event."
+    - run: echo  "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+    - run: echo  "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+    - run: echo "${{ secrets.PASSWORD }}"
+    - name: Print custom environment variables from ubuntu-latest
+      env:
+        STEP_ENVIRONMENT_VARIABLE: 'custom step environment variable for bash'
       run: |
-        python --version
-        python -m pip install --upgrade pip
-        pip install pycodestyle
-    - name: Style with pycodestyle
-      run: |
-        python --version
-        pycodestyle *.py
+        echo "Accessing environment variables in run command"
+        echo "$WORKSPACE_ENVIRONMENT_VARIABLE"
+        echo "$JOB_ENVIRONMENT_VARIABLE"
+        echo "$STEP_ENVIRONMENT_VARIABLE"
+
   #steps:
     - name: Checkout
       uses: actions/checkout@v2
