--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,10 @@ jobs:
         echo "$WORKSPACE_ENVIRONMENT_VARIABLE"
         echo "$JOB_ENVIRONMENT_VARIABLE"
         echo "$STEP_ENVIRONMENT_VARIABLE"
-        
+  unit-test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
     - name: Check out repository code
       uses: actions/checkout@v2
   #steps:
