--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,6 +24,14 @@ jobs:
         echo "$STEP_ENVIRONMENT_VARIABLE"
 
   #steps:
+
+    - name: Set up node 
+      uses: actions/setup-node@v1
+   
+    - name: Install dependencies
+      run: npm install
+    - name: Run tests 
+      run: npm test
     - name: Checkout
       uses: actions/checkout@v2
 
