--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,6 +54,8 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   #steps:
   deploy:
+    runs on: ubuntu-latest
+    steps:
     - name: Checkout
       uses: actions/checkout@v2
 
