--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -53,7 +53,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   #steps:
-
+  build:
+    needs: [SAST]
+    runs-on: ubuntu-latest
+    steps:
     - name: Checkout
       uses: actions/checkout@v2
 
