--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,18 +40,18 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
          command: monitor
-  SAST:
-    name: SonarCloud
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+ # SAST:
+ #   name: SonarCloud
+ #   runs-on: ubuntu-latest
+ #   steps:
+ #     - uses: actions/checkout@v2
+ #       with:
+ #         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+ #     - name: SonarCloud Scan
+ #       uses: SonarSource/sonarcloud-github-action@master
+ #       env:
+ #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+ #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
  # SAST:
  #   needs: [ unit-test ]  
@@ -68,7 +68,8 @@ jobs:
  #       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   #next steps:
   build:
-    needs: [SAST]
+    needs: [unit-test]
+ #   needs: [SAST]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
