--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,7 +30,7 @@ jobs:
     - name: Check out repository code
       uses: actions/checkout@v2
   SCA:
-    needs: build
+    needs: pre-build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
