--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,14 +32,33 @@ jobs:
   SCA:
     needs: pre-build
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-         command: monitor
+steps:
+  - script: |
+      npm install
+    displayName: 'npm install'
+
+  - script: |
+      sudo npm install -g snyk
+
+      # create variable in Pipelines called 'SNYK_TOKEN' and securely save your Snyk token value
+      # https://docs.microsoft.com/en-us/azure/devops/pipelines/process/variables
+
+      sudo snyk auth $(SNYK_TOKEN)
+    displayName: 'install snyk'
+
+  - script: |
+      # sudo snyk test --all-projects
+      sudo snyk test --file=OAI.sln
+    displayName: 'sudo snyk test'
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@master
+#      - name: Run Snyk to check for vulnerabilities
+#        uses: snyk/actions/node@master
+#        env:
+#          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+#        with:
+#         command: monitor
  # SAST:
  #   name: SonarCloud
  #   runs-on: ubuntu-latest
