--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,9 +33,9 @@ jobs:
     needs: pre-build
     runs-on: ubuntu-latest
 steps:
-  - script: |
-      npm install
-    displayName: 'npm install'
+#  - script: |
+ #     npm install
+  #  displayName: 'npm install'
 
   - script: |
       sudo npm install -g snyk
