--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,11 +33,11 @@ jobs:
     needs: pre-build
     runs-on: ubuntu-latest
 steps:
-#  - script: |
- #     npm install
-  #  displayName: 'npm install'
+  - run: |
+      npm install
+    displayName: 'npm install'
 
-  - script: |
+  - run: |
       sudo npm install -g snyk
 
       # create variable in Pipelines called 'SNYK_TOKEN' and securely save your Snyk token value
@@ -46,7 +46,7 @@ steps:
       sudo snyk auth $(SNYK_TOKEN)
     displayName: 'install snyk'
 
-  - script: |
+  - run: |
       # sudo snyk test --all-projects
       sudo snyk test --file=OAI.sln
     displayName: 'sudo snyk test'
