--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,45 +32,27 @@ jobs:
   SCA:
     needs: pre-build
     runs-on: ubuntu-latest
-steps:
-  - run: |
-      npm install
-    displayName: 'npm install'
-
-  - run: |
-      sudo npm install -g snyk
-
-      # create variable in Pipelines called 'SNYK_TOKEN' and securely save your Snyk token value
-      # https://docs.microsoft.com/en-us/azure/devops/pipelines/process/variables
-
-      sudo snyk auth $(SNYK_TOKEN)
-    displayName: 'install snyk'
-
-  - run: |
-      # sudo snyk test --all-projects
-      sudo snyk test --file=OAI.sln
-    displayName: 'sudo snyk test'
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@master
-#      - name: Run Snyk to check for vulnerabilities
-#        uses: snyk/actions/node@master
-#        env:
-#          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-#        with:
-#         command: monitor
- # SAST:
- #   name: SonarCloud
- #   runs-on: ubuntu-latest
- #   steps:
- #     - uses: actions/checkout@v2
- #       with:
- #         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
- #     - name: SonarCloud Scan
- #       uses: SonarSource/sonarcloud-github-action@master
- #       env:
- #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
- #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    steps:
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+         command: monitor
+  SAST:
+    needs: pre-build
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
  # SAST:
  #   needs: [ unit-test ]  
