--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,11 +35,11 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
+        uses: snyk/actions/html@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-         command: monitor
+          args: --severity-threshold=high
   SAST:
     needs: [ unit-test ]
     name: SonarCloud
