--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,12 +34,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+        continue-on-error: true
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/html@master
+        uses: snyk/actions/docker@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          command: monitor
+          image: nginx:latest
+          args: --file=Dockerfile
   SAST:
     needs: [ unit-test ]
     name: SonarCloud
