--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -55,6 +55,22 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          
+  database-integration:
+    needs: pre-build
+    runs-on: ubuntu-latest
+    container: node:10.18-jessie
+    services:
+      postgres:
+        image: postgres
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - name: Connect to PostgreSQL
+        run: python --version #validate_db.py
+        env:
+          POSTGRES_HOST: postgres
+          POSTGRES_PORT: 5432          
 
  # SAST:
  #   needs: [ unit-test ]  
