--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,13 +36,11 @@ jobs:
       - uses: actions/checkout@master
         continue-on-error: true
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
+        uses: snyk/actions/docker@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          command: monitor
-        #  image: nginx:latest
-         # args: --file=Dockerfile
+          args: --file=Dockerfile
   SAST:
     needs: [ unit-test ]
     name: SonarCloud
