--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,13 +41,13 @@ security:
         with:
           command: monitor
 
-  build:
-    runs-on: ubuntu-latest
+    build:
+     runs-on: ubuntu-latest
     strategy:
       matrix:
       node-version: [10.x, 12.x, 14.x, 15.x]
 
-    steps:
+      steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: Use Node.js &#36;&#123;&#123; matrix.node-version &#125;&#125;
@@ -59,10 +59,10 @@ security:
       - run: npm run build --if-present
       - run: npm test
 
-  publish:
-    needs: [security, build]
-    runs-on: ubuntu-latest
-    steps:
+    publish:
+    needs:  build]
+   # runs-on: ubuntu-latest
+      steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v2
