--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,10 +25,26 @@ jobs:
         echo "$STEP_ENVIRONMENT_VARIABLE"
   unit-test:
     needs: database-integration
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #  - name: Check out repository code
+  #    uses: actions/checkout@v2
     runs-on: ubuntu-latest
     steps:
-    - name: Check out repository code
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v1
+
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      # Execute unit tests
+      - name: Unit Test
+        run: ./gradlew testDebugUnitTest
+
+      - name: Android Test Report
+        uses: asadmansr/android-test-report-action@v1.2.0
+        if: ${{ always() }} # IMPORTANT: run Android Test Report regardless
   SCA:
     needs: database-integration
     runs-on: ubuntu-latest
