--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,21 +26,9 @@ jobs:
   unit-test:
     needs: database-integration
     runs-on: ubuntu-latest
-  #  steps:
-  #  - name: Check out repository code
-  #    uses: actions/checkout@v2
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x]
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: Check out repository code
+      uses: actions/checkout@v2
 
   SCA:
     needs: database-integration
@@ -83,7 +71,16 @@ jobs:
         run: python --version #validate_db.py
         env:
           POSTGRES_HOST: postgres
-          POSTGRES_PORT: 5432          
+          POSTGRES_PORT: 5432  
+
+      - name: Check out code
+      - uses: actions/checkout@v2
+      - name: Set up node 
+        uses: actions/setup-node@v1
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests 
+        run: npm test
           
   #next steps:
   build:
