--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -69,18 +69,20 @@ jobs:
         uses: actions/checkout@v2
       - name: Connect to PostgreSQL
         run: python --version #validate_db.py
-        env:
-          POSTGRES_HOST: postgres
-          POSTGRES_PORT: 5432  
+    #next
 
-      - name: Check out code
-      - uses: actions/checkout@v2
       - name: Set up node 
         uses: actions/setup-node@v1
       - name: Install dependencies
         run: npm install
       - name: Run tests 
         run: npm test
+        
+        env:
+          POSTGRES_HOST: postgres
+          POSTGRES_PORT: 5432  
+
+
           
   #next steps:
   build:
