--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,7 +60,8 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: monitor
-          args: --file=Dockerfile
+          args: --file=./Dockerfile --project-name=insn0w/AWS
+
   SAST:
     needs: [ unit-test ]
     name: SonarCloud
@@ -95,28 +96,28 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build, tag, and push image to Amazon ECR
-      id: build-image
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: gitops-argocd
+#    - name: Build, tag, and push image to Amazon ECR
+#      id: build-image
+#      env:
+#        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+#        ECR_REPOSITORY: gitops-argocd
 
-      run: |
-        # Build a docker container and push it to ECR
-        git_hash=$(git rev-parse --short "$GITHUB_SHA")
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash .
-        echo "Pushing image to ECR..."
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash"
+ #     run: |
+ #       # Build a docker container and push it to ECR
+ #       git_hash=$(git rev-parse --short "$GITHUB_SHA")
+  #      docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash .
+  #      echo "Pushing image to ECR..."
+  #      docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash
+  #      echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash"
         
-    - name: Update Version
-      run: |
-          git_hash=$(git rev-parse --short "$GITHUB_SHA")
-          version=$(cat ./charts/helm-example/values.yaml | grep version: | awk '{print $2}')
-          sed -i "s/$version/${GITHUB_REF##*/}-$git_hash/" ./charts/helm-example/values.yaml
+  #  - name: Update Version
+  #    run: |
+  #        git_hash=$(git rev-parse --short "$GITHUB_SHA")
+  #        version=$(cat ./charts/helm-example/values.yaml | grep version: | awk '{print $2}')
+  #        sed -i "s/$version/${GITHUB_REF##*/}-$git_hash/" ./charts/helm-example/values.yaml
           
-    - name: Commit and push changes
-      uses: devops-infra/action-commit-push@v0.3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        commit_message: Version updated
+  #  - name: Commit and push changes
+  #    uses: devops-infra/action-commit-push@v0.3
+  #    with:
+  #      github_token: ${{ secrets.GITHUB_TOKEN }}
+  #      commit_message: Version updated
