--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,7 +60,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: monitor
-          args: --file=./Dockerfile --project-name=insn0w/AWS
+          args: --file=./Dockerfile --project-name=insn0w/gitops
 
   SAST:
     needs: [ unit-test ]
@@ -96,14 +96,14 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-#    - name: Build, tag, and push image to Amazon ECR
-#      id: build-image
-#      env:
-#        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-#        ECR_REPOSITORY: gitops-argocd
+  #  - name: Build, tag, and push image to Amazon ECR
+  #    id: build-image
+  #    env:
+  #      ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+  #      ECR_REPOSITORY: gitops
 
- #     run: |
- #       # Build a docker container and push it to ECR
+   #   run: |
+  #      # Build a docker container and push it to ECR
  #       git_hash=$(git rev-parse --short "$GITHUB_SHA")
   #      docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash .
   #      echo "Pushing image to ECR..."
