--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,24 +62,24 @@ jobs:
 #          command: monitor
 #          args: --file=./Dockerfile --project-name=insn0w/gitops
 
-#  SAST:
-#    needs: [ unit-test ]
-#    name: SonarCloud
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-#      - name: SonarCloud Scan
-#        uses: SonarSource/sonarcloud-github-action@master
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  SAST:
+    needs: [ unit-test ]
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           
           
   #next steps:
   build:
-   # needs: [ SAST ]
+    needs: [ SAST ]
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -97,11 +97,11 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-  #  - name: Build, tag, and push image to Amazon ECR
-  #    id: build-image
-  #    env:
-  #      ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-  #      ECR_REPOSITORY: gitops
+    - name: Build, tag, and push image to Amazon ECR
+      id: build-image
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: gitops
 
    #   run: |
   #      # Build a docker container and push it to ECR
