--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -105,13 +105,20 @@ jobs:
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
             ECR_REPOSITORY: new-cgafrica-backend
             IMAGE_TAG: ${{ github.sha }}
-      run: |
-            # Build a docker container and
-            # push it to ECR so that it can
-            # be deployed to ECS.
-            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-            echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+            
+
+      uses: docker/build-push-action@v2
+      with:
+          context: .
+          file: ./Dockerfile
+          push: true           
+ #     run: |
+ #           # Build a docker container and
+ #           # push it to ECR so that it can
+ #           # be deployed to ECS.
+ #           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+ #           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+ #           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
 #    - name: Build, tag, and push image to Amazon ECR
 #      id: build-image
