--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -111,7 +111,8 @@ jobs:
       with:
           context: .
           file: ./Dockerfile
-          push: true           
+          push: true 
+          tags: ${{ github.sha }}/nginx:latest
  #     run: |
  #           # Build a docker container and
  #           # push it to ECR so that it can
