--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -105,7 +105,11 @@ jobs:
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
             ECR_REPOSITORY: new-cgafrica-backend
             IMAGE_TAG: ${{ github.sha }}
-            
+
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    -  
 
       uses: docker/build-push-action@v2
       with:
