--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -80,19 +80,7 @@ jobs:
   #next steps:
   build:
    # needs: [ SAST ]
-    runs-on: ubuntu-latest
-#    steps:
- #   - name: Checkout
- #     uses: actions/checkout@v2
-
- #   - name: Configure AWS credentials
- #     uses: aws-actions/configure-aws-credentials@v1
- #     with:
- #       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
- #       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
- #       aws-region: ${{ secrets.AWS_REGION }}
- #       aws-region: us-east-1
- 
+    runs-on: ubuntu-latest 
  
     steps:
         - name: Checkout
@@ -113,7 +101,8 @@ jobs:
           id: build-image
           env:
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-            ECR_REPOSITORY: new-cgafrica-backend
+            ECR_REPOSITORY: gitops
+#            ECR_REPOSITORY: new-cgafrica-backend
             IMAGE_TAG: ${{ github.sha }}
           run: |
             # Build a docker container and
@@ -122,35 +111,6 @@ jobs:
             docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
             docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
             echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
- 
- 
-
-  #  - name: Login to Amazon ECR
-   #   id: login-ecr
-    #  uses: aws-actions/amazon-ecr-login@v1
-      
-      
-      
-  #  - name: Build, tag, and push image to Amazon ECR
-  #    id: build-image
-  #    env:
-  #          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-  #          ECR_REPOSITORY: new-cgafrica-backend
-  #          IMAGE_TAG: ${{ github.sha }}
-
- #     run: |
- #           # Build a docker container and
- #           # push it to ECR so that it can
- #           # be deployed to ECS.
- #           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
- #           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
- #           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-
-#    - name: Build, tag, and push image to Amazon ECR
-#      id: build-image
-#      env:
-#        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-#        ECR_REPOSITORY: gitops
 
 #      run: |
 #        # Build a docker container and push it to ECR
