--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -102,29 +102,21 @@ jobs:
           env:
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
             ECR_REPOSITORY: gitops
-#            ECR_REPOSITORY: new-cgafrica-backend
             IMAGE_TAG: ${{ github.sha }}
           run: |
             # Build a docker container and
             # push it to ECR so that it can
             # be deployed to ECS.
             docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+            echo "Pushing image to ECR..."
             docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
             echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-
-#      run: |
-#        # Build a docker container and push it to ECR
-#        git_hash=$(git rev-parse --short "$GITHUB_SHA")
-#        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash .
-#        echo "Pushing image to ECR..."
-#        docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash
-#        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash"
         
-#    - name: Update Version
-#      run: |
-#          git_hash=$(git rev-parse --short "$GITHUB_SHA")
-#          version=$(cat ./charts/helm-example/values.yaml | grep version: | awk '{print $2}')
-#          sed -i "s/$version/${GITHUB_REF##*/}-$git_hash/" ./charts/helm-example/values.yaml
+        - name: Update Version
+          run: |
+           git_hash=$(git rev-parse --short "$GITHUB_SHA")
+           version=$(cat ./charts/helm/values.yaml | grep version: | awk '{print $2}')
+           sed -i "s/$version/${GITHUB_REF##*/}-$git_hash/" ./charts/helm/values.yaml
           
 #    - name: Commit and push changes
 #      uses: devops-infra/action-commit-push@v0.3
