--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -118,8 +118,8 @@ jobs:
            version=$(cat ./charts/helm/values.yaml | grep version: | awk '{print $2}')
            sed -i "s/$version/${GITHUB_REF##*/}-$git_hash/" ./charts/helm/values.yaml
           
-#    - name: Commit and push changes
-#      uses: devops-infra/action-commit-push@v0.3
-#      with:
-#        github_token: ${{ secrets.GITHUB_TOKEN }}
-#        commit_message: Version updated
+        - name: Commit and push changes
+          uses: devops-infra/action-commit-push@v0.3
+          with:
+              github_token: ${{ secrets.GITHUB_TOKEN }}
+              commit_message: Version updated
